<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".CategoryActivity">

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ll_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/manage_your_categories"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ll_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_categories"/>

    <LinearLayout
        android:id="@+id/ll_enter_category"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_back">
        <EditText
            android:id="@+id/edt_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="@string/enter_sub_task"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_new"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/primary_button"
        android:textColor="@color/white"
        android:elevation="20sp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_enter_category"
        app:layout_constraintTop_toBottomOf="@+id/ll_back" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_subtasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new"/>


</androidx.constraintlayout.widget.ConstraintLayout>