<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/bg"
  android:paddingTop="20dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ll_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/ll_constraint_details"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="80dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      app:layout_constraintBottom_toBottomOf="parent">

      <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
          android:id="@+id/img_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="15dp"
          android:background="?selectableItemBackgroundBorderless"
          android:clickable="true"
          android:focusable="true"
          app:srcCompat="@drawable/ic_back" />
      </LinearLayout>

      <TextView
        android:id="@+id/txt_task_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/task_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ll_back"
        app:layout_constraintTop_toTopOf="parent"/>

      <TextView
        android:id="@+id/txt_created_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/created_date"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ll_back"
        app:layout_constraintTop_toBottomOf="@+id/txt_task_title"/>

      <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_task_title"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
          android:id="@+id/img_delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?selectableItemBackgroundBorderless"
          android:clickable="true"
          android:focusable="true"
          app:srcCompat="@drawable/ic_delete" />
      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewPagerMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_delete"
        tools:listitem="@layout/details_image_item" />

      <LinearLayout
        android:id="@+id/ll_play_audio"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerMain">


        <ImageButton
          android:id="@+id/playButton"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:layout_marginStart="20dp"
          android:background="@color/white"
          android:src="@drawable/ic_play"/>

        <TextView
          android:id="@+id/txt_due_date"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:padding="10dp"
          android:textSize="14sp"
          android:gravity="left|center"
          android:fontFamily="@font/poppins"
          android:text="@string/play_audio"
          android:background="@android:color/transparent"/>
      </LinearLayout>

      <TextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cooking_decscription"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_play_audio"/>

      <LinearLayout
        android:id="@+id/progressWrapper"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/txt_description"
        android:layout_height="60dp">

        <TextView
          android:id="@+id/tex_progress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sub_task_progress"
          android:textSize="12sp"
          android:fontFamily="@font/poppins_bold"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="10dp"
          android:textColor="@color/text_grey"
          tools:ignore="Suspicious0dp" />

        <ProgressBar
          android:id="@+id/task_progress"
          android:layout_marginTop="10dp"
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="match_parent"
          android:progress="40"
          android:progressDrawable="@drawable/custom_progress_bar"
          android:layout_height="8dp"
          android:layout_marginBottom="10dp"
          app:layout_constraintTop_toBottomOf="@id/tex_progress"
          tools:ignore="MissingConstraints" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/ll_edtCategory"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressWrapper">
        <EditText
          android:id="@+id/edt_sub_task"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:paddingLeft="20dp"
          android:hint="@string/enter_sub_task"
          android:textSize="13dp"
          android:background="@android:color/transparent"
          android:fontFamily="@font/poppins"/>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/ll_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_edtCategory"
        app:layout_constraintTop_toBottomOf="@+id/progressWrapper" >
        <ImageView
          android:id="@+id/img_add_sub_task"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?selectableItemBackgroundBorderless"
          android:clickable="true"
          android:focusable="true"
          app:srcCompat="@drawable/ic_add" />
      </LinearLayout>


      <androidx.recyclerview.widget.RecyclerView
        android:scrollbars="vertical"
        android:id="@+id/view_subtasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_add"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="bottom"
      android:layout_marginTop="15dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ll_constraint_details">

      <Button
        android:id="@+id/btn_mark_completed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/primary_button"
        android:textColor="@color/white"
        android:elevation="20sp"
        android:text="@string/mark_completed"/>
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
